--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+
+[dependencies.image]
+version = "0.24.5"
+default-features = false
+features = ["png", "jpeg"]
+
+# `image` crate is slow without optimizations
+[profile.dev.package."*"]
+opt-level = 3
